--- a/src/app.html
+++ b/src/app.html
@@ -3,10 +3,12 @@
 	<head>
 		<meta charset="utf-8" />
 		<link rel="icon" href="%sveltekit.assets%/favicon.png" />
-		<meta name="viewport" content="width=device-width" />
+		<meta name="viewport" content="width=device-width, initial-scale=1.0">
+		<script src="https://cdn.jsdelivr.net/npm/tsparticles-confetti@2.9.3/tsparticles.confetti.bundle.min.js"></script>
 		%sveltekit.head%
+		<title>Kana King</title>
 	</head>
-	<body data-sveltekit-preload-data="hover" style="background-color: black; color: white;">
-		<div style="display: contents; ">%sveltekit.body%</div>
+	<body data-sveltekit-preload-data="hover" style="font-family: Arial, Helvetica, sans-serif; color: white; padding: 0; margin: 0;">
+		<div style="display: contents;">%sveltekit.body%</div>
 	</body>
 </html>
