--- a/src/app.html
+++ b/src/app.html
@@ -2,10 +2,18 @@
 <html lang="en">
 	<head>
 		<meta charset="utf-8" />
-		<link rel="icon" href="%sveltekit.assets%/favicon.png" />
+		<link rel="icon" href="" />
 		<meta name="viewport" content="width=device-width, initial-scale=1, maximum-scale=1">
 		<script src="https://cdn.jsdelivr.net/npm/tsparticles-confetti@2.9.3/tsparticles.confetti.bundle.min.js"></script>
 		<link rel="stylesheet" href="https://cdn.jsdelivr.net/gh/iconoir-icons/iconoir@main/css/iconoir.css">
+		
+		<!-- Icons -->
+		<link rel="apple-touch-icon" sizes="180x180" href="/apple-touch-icon.png">
+		<link rel="stylesheet" href="./resources/icons/favicon-32x32.png">
+		<link rel="icon" type="image/png" sizes="32x32" href="./resources/icons/favicon-32x32.png">
+		<link rel="icon" type="image/png" sizes="16x16" href="./resources/icons/favicon-16x16.png">
+		<link rel="manifest" href="./resources/icons/site.webmanifest">
+		
 		%sveltekit.head%
 		<title>Kana King</title>
 	</head>
